--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
     color: gray;
     padding-top: 10px;
     padding-bottom: 10px;
+    position: static;
     } 
     .main-dv{
         display: inline-flex;
@@ -20,3 +21,13 @@ body {
         margin-top: 30px;
         background-color: black !important;
     }
+    .stock-font{
+        font-size: 30px;
+        color: black;
+    }
+
+    .solution{
+        font-size: 60px;
+        color: black;
+    }
+    
