--- a/css/logon.css
+++ b/css/logon.css
@@ -19,6 +19,7 @@ body {
         display: flex;
         margin-top: 30px;
         background-color: transparent;
+        padding-left: 50px;
     }
     
     .col-sm-8 a{
@@ -44,7 +45,7 @@ body {
 .login-box{
     width: 280px;
     position: absolute;
-    top: 55%;
+    top: 60%;
     left: 45%;
     transform: translate(-40% -50%);
 }
