--- a/css/request.css
+++ b/css/request.css
@@ -19,6 +19,7 @@ body {
         display: flex;
         margin-top: 30px;
         background-color: transparent;
+        padding-left: 50px;
     }
 
     .col-sm-8 a{
@@ -38,4 +39,9 @@ body {
         z-index: 1;
         color: rgb(32, 13, 13);
         padding: 50px;
+    }
+
+    .item-container{
+        padding: 50px 50px 50px 50px;
+
     }
