--- a/css/cardrequest.css
+++ b/css/cardrequest.css
@@ -46,3 +46,30 @@ body {
         padding-right: 150px;
         padding-bottom: 100px;
     }
+    .card-item {
+        flex-basis: 80%;
+    }
+    .approval-cards {
+        margin-bottom: 15px;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+
+
+    @media only screen and (max-width: 999px) {
+        .approval-cards {
+            flex-direction: column;
+            width: 100%;
+            margin-bottom: 30px;
+        }
+
+        .approval-cards button {
+            margin-top: 15px;
+        }
+    }
+
+    .container {
+        width: 90%;
+        margin: 0 auto;
+    }
